feat(ai): 新增AI文件操作工具集
- 新增基础工具类BaseTool，定义工具通用接口- 实现文件读取、写入、修改、删除工具- 添加目录结构读取工具，支持忽略特定文件
- 新增工具管理器ToolManage，统一管理所有工具-优化AI代码生成服务工厂，支持动态工具注入
- 改进推理流式聊天模型配置，增加超时设置- 更新应用常量路径分隔符，提高跨平台兼容性- 修复前端类型定义，统一ID字段为字符串类型
-优化首页样式和动画效果，提升用户体验
- 配置开发环境代理，解决跨域问题